remove print statement

--- a/courses/machine_learning/deepdive/07_structured/4_preproc_tft.ipynb
+++ b/courses/machine_learning/deepdive/07_structured/4_preproc_tft.ipynb
@@ -216,7 +216,7 @@
     "    # and so we don't know sex of the baby. Let's assume that we can tell the difference\n",
     "    # between single and multiple, but that the errors rates in determining exact number\n",
     "    # is difficult in the absence of an ultrasound.\n",
-    "    print(rowdict)\n",
+    "    #print(rowdict)\n",
     "    no_ultrasound = copy.deepcopy(rowdict)\n",
     "    no_ultrasound[u'is_male'] = u'Unknown'\n",
     "\n",
